Add npm install to cd script

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -18,5 +18,6 @@ jobs:
           script: |
             cd $HOME/ol-th.github.io
             git pull
+            npm install
             yarn build
             ipfs add -r build -Q
