--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -18,4 +18,4 @@ jobs:
           script: |
             cd $HOME/ol-th.github.io
             git pull
-            docker exec ipfs_host ipfs_add -r export/website/src
+            docker exec ipfs_host ipfs name publish --key=website "/ipfs/$(docker exec ipfs_host ipfs add -r export/website/src -Q)"
