--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
         "autoprefixer": "^9.8.4",
         "postcss-cli": "^7.1.1",
         "postcss-import": "^12.0.1",
+        "postcss": "^8.0.9",
         "serve": "^11.3.2",
-        "tailwindcss": "^1.9.6",
+        "tailwindcss": "^3.1.4",
         "watch": "^1.0.2"
     }
 }
