--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "build:pages": "rm -rf build && mkdir -p build && cp -r ./src/*.html ./build/",
         "serve:prod": "yarn build && yarn serve build",
         "serve:dev": "yarn serve src",
-        "compile:css:prod": "NODE_ENV=production npx tailwindcss build ./src/main.css -o ./build/index.css",
+        "compile:css:prod": "NODE_ENV=production npx tailwindcss build -i ./src/main.css -o ./build/index.css",
         "compile:css:dev": "npx tailwindcss build ./src/main.css -o ./src/index.css",
         "watch": "watch 'yarn compile:css:dev' ./src/"
     },
