--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "main": "build/index.html",
     "scripts": {
         "build:all": "yarn build:pages && yarn compile:css:prod",
-        "build:pages": "rm -rf build && mkdir -p build && cp -r ./src/*.html ./build/",
+        "build:pages": "rm -rf build && mkdir -p build && cp -r ./src/*.html ./build/ && cp -r ./src/images ./build/",
         "serve:prod": "yarn build && yarn serve build",
         "serve:dev": "yarn serve src",
         "compile:css:prod": "NODE_ENV=production npx tailwindcss build -i ./src/main.css -o ./build/index.css",
