--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -22,4 +22,4 @@ jobs:
             echo "Building" && \
             yarn build:all && \
             echo "Uploading to IPFS" && \
-            ipfs name publish --key=website "/ipfs/$(ipfs add -r build -Q)"
+            ipfs name publish --key=website "/ipfs/$(ipfs add -r dist -Q)"
